{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "edde8368-33bf-4c48-83d8-58a7815eaf2d",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "aaeaad12-2e56-4b86-aaf9-212695f21989",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoRight",
                    "type": "Button",
                    "id": "ee2dd57f-54b6-489a-9043-60aaa7a7d892",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoLeft",
                    "type": "Button",
                    "id": "02eefe12-596a-4fe4-885b-d3fd34bdc0ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "c87fa02f-312e-4fff-b61f-4eaeab4679e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d03ad61a-5a74-4589-ad0a-56ff3532c290",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adc523f4-4ce5-45f8-85e7-ba3b2e145b3f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f284e5aa-6f8f-469e-9e38-38539671ddbf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fafbe319-206a-4925-93fd-273317d8d490",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}